--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      BUCKET_NAME: produc9ionbucket
+      BUCKET_NAME: myprodbuket
     steps:
       - name: Check out code
         uses: actions/checkout@v2
